@@ -863,7 +863,6 @@ CREME_CORE_JS = [
     'creme_core/js/lib/fallbacks/object-0.1.js',
     'creme_core/js/lib/fallbacks/array-0.9.js',
     'creme_core/js/lib/fallbacks/string-0.1.js',
-    'creme_core/js/lib/fallbacks/console.js',
     'creme_core/js/lib/math.js',
     'creme_core/js/lib/color.js',
     'creme_core/js/lib/assert.js',
